@@ -1,3 +1,10 @@
+2006-07-18  Mo DeJong  <mdejong@users.sourceforge.net>
+
+        * src/jacl/tcl/lang/QSort.java (doDictionary):
+        Reimplement dictionary compare based on Tcl 8.4.
+        * tests/tcl/lsort.test: Add test cases that
+        expose broken disctionary sort order.
+
 2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>
 
         * tests/tcljava/FuncSig.test: Fixup signature
